--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,6 @@ out = "out"
 libs = ["lib", "node_modules"]
 solc = "0.8.24"
 evm_version = "paris"
-fs_permissions = [{ access = "read-write", path = "./"}]
+fs_permissions = [{ access = "write", path = "./src/SVG/output/"}]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
