:white_check_mark: Update URI function to return base64 encoded JSON, add test cases, use file reading to clean up script file

--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,8 @@ solc = "0.8.24"
 evm_version = "paris"
 fs_permissions = [
     { access = "write", path = "./src/SVG/output/"},
-    { access = "read", path = "./test/helpers/font.json/"}
+    { access = "read", path = "./test/helpers/font.json/"},
+    { access = "read", path = "./test/helpers/nouns-config-data.json/"}
 ]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
